crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT unnest('base hidden rebel spaceship strike'::tsvector);"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..13 "unnest"
      Ascii40@13..14 "("
      TypeCast@14..60
        AConst@14..50
          Sconst@14..50 "'base hidden rebel sp ..."
        Typecast@50..52 "::"
        TypeName@52..60
          Ident@52..60 "tsvector"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

