crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@214.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM unnest('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector);"
---
SelectStmt@0..95
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..93
    List@14..93
      FuncCall@14..93
        Ident@14..20 "unnest"
        Ascii40@20..21 "("
        TypeCast@21..93
          AConst@21..83
            Sconst@21..83 "'base:7 hidden:6 rebe ..."
          Typecast@83..85 "::"
          TypeName@85..93
            Ident@85..93 "tsvector"
  Ascii41@93..94 ")"
  Ascii59@94..95 ";"

