crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@215.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM unnest('base hidden rebel spaceship strike'::tsvector);"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..67
    List@14..67
      FuncCall@14..67
        Ident@14..20 "unnest"
        Ascii40@20..21 "("
        TypeCast@21..67
          AConst@21..57
            Sconst@21..57 "'base hidden rebel sp ..."
          Typecast@57..59 "::"
          TypeName@59..67
            Ident@59..67 "tsvector"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

