crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT tsvector_to_array('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector);"
---
SelectStmt@0..99
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..97
    FuncCall@7..97
      Ident@7..24 "tsvector_to_array"
      Ascii40@24..25 "("
      TypeCast@25..97
        AConst@25..87
          Sconst@25..87 "'base:7 hidden:6 rebe ..."
        Typecast@87..89 "::"
        TypeName@89..97
          Ident@89..97 "tsvector"
  Ascii41@97..98 ")"
  Ascii59@98..99 ";"

