crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@218.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT tsvector_to_array('base hidden rebel spaceship strike'::tsvector);"
---
SelectStmt@0..73
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..71
    FuncCall@7..71
      Ident@7..24 "tsvector_to_array"
      Ascii40@24..25 "("
      TypeCast@25..71
        AConst@25..61
          Sconst@25..61 "'base hidden rebel sp ..."
        Typecast@61..63 "::"
        TypeName@63..71
          Ident@63..71 "tsvector"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

