crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@219.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT array_to_tsvector(ARRAY['base','hidden','rebel','spaceship','strike']);"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..24 "array_to_tsvector"
      Ascii40@24..25 "("
      AArrayExpr@25..75
        Array@25..30 "ARRAY"
        Ascii91@30..31 "["
        AConst@31..37
          Sconst@31..37 "'base'"
        Ascii44@37..38 ","
        AConst@38..46
          Sconst@38..46 "'hidden'"
        Ascii44@46..47 ","
        AConst@47..54
          Sconst@47..54 "'rebel'"
        Ascii44@54..55 ","
        AConst@55..66
          Sconst@55..66 "'spaceship'"
        Ascii44@66..67 ","
        AConst@67..75
          Sconst@67..75 "'strike'"
  Ascii93@75..76 "]"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

